[package]
name = "ort-rs"
version = "0.2.0"
edition = "2021"
description = "Object Record Table - a CSV like structured data format with native object and array support."
license = "MIT"
repository = "https://github.com/BackGwa/ORT"
homepage = "https://github.com/BackGwa/ORT"
documentation = "https://github.com/BackGwa/ORT"

[lib]
path = "rust/lib.rs"

[[bin]]
name = "ort2json"
path = "rust/bin/ort2json.rs"
required-features = ["serde_json"]

[[bin]]
name = "json2ort"
path = "rust/bin/json2ort.rs"
required-features = ["serde_json"]

[dependencies]
serde_json = { version = "1.0", optional = true }
colored = "2.0"

[features]
default = ["serde_json"]
